Added ProgressBar, fixed bugs in FITSWrapper, finished with loading DRAGON 3D files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(hermes SHARED
 	src/Random.cpp
 	src/HEALPixBits.cpp
 	src/FITSWrapper.cpp
+	src/ProgressBar.cpp
 	src/skymaps/Skymap.cpp
 	src/skymaps/SynchroSkymapRange.cpp
 	src/integrators/Integrator.cpp
